test/trivial/shannon/readWriteBool.good
true
false
readWriteBool.chpl:9: error: bad format: missing expected literal in channel.read(ref a:bool) with path "readWriteBool.stdin" offset 10
