test/trivial/shannon/readWriteBool.chpl
use IO;

var isTrue: bool;
var isFalse:   bool;
var notABool: bool;

read(isTrue);
writeln(isTrue);
read(isFalse);
writeln(isFalse);
read(notABool);
